move events map css to .styl . Adapt for mobile. Move JS to bottom of file

--- a/layouts/css/_variables.styl
+++ b/layouts/css/_variables.styl
@@ -6,7 +6,11 @@ $node-green = #80bd01
 $light-green = #f1fbda
 $hover-green = #d9ebb3
 
-$hover-red = #CC2828
+$yellow = #f7da03
+
+$hover-red = #cc2828
+
+$blue = #3887be
 
 $light-gray3 = #f0f0f0
 $light-gray2 = #ccc
