add has-js class to html element for css targeting

--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="/{{ site.locale }}/styles.css" media="all">
 
     <script>
+        document.querySelector('html').className += " has-js";
+
         var WebFontConfig = { google: { families: ['Source Sans Pro:400,600'] } };
         !function(n,o,d,e,j,s){n.GoogleAnalyticsObject=d;n[d]||(n[d]=function(){
         (n[d].q=n[d].q||[]).push(arguments)});n[d].l=+new Date;j=o.createElement(e);
