replace hard-coded event numbers

--- a/layouts/events.hbs
+++ b/layouts/events.hbs
@@ -59,7 +59,7 @@
 
                   <h2>
                     <span class="arrow">&#62;</span>
-                    <a class="js-list-toggle-link" href="#">NodeSchools <span class="events-number">10</span></a>
+                    <a class="js-list-toggle-link" href="#">NodeSchools <span class="events-number">{{nodeschools.length}}</span></a>
                   </h2>
                   <ul class="events-list">
                   {{#each nodeschools}}
@@ -79,7 +79,7 @@
 
                   <h2>
                     <span class="arrow">&#62;</span>
-                    <a class="js-list-toggle-link" href="#">Meetups <span class="events-number">10</span></a>
+                    <a class="js-list-toggle-link" href="#">Meetups <span class="events-number">{{meetups.length}}</span></a>
                     </h2>
                   <ul class="events-list">
                   {{#each meetups}}
