--- a/layouts/events.hbs
+++ b/layouts/events.hbs
@@ -43,23 +43,24 @@
                 {{#each regions}}
                 <div class="region">
                   <h1>{{region}}</h1>
-                  {{#if conferences}}<h2>Conferences</h2>{{/if}}
-                  {{#each conferences}}
-                  <div class="conference">
-                    <h3><a href="{{link}}">{{name}}</a>
-                      {{#if location}}
-                        - <small class="map-link"><a href="https://www.google.com/maps/place/{{location}}">map</a></small>
-                      {{/if}}
-                    </h3>
-                    {{#if desc}}
-                    <p class="conference-description">{{desc}}</p>
-                    {{/if}}
-                  </div>
+                  {{#if conferences}}<h2>Conferences <span class="events-number"></span></h2>{{/if}}
+                  <div class ="conference-list">     
+                  {{#each conferences}}                                   
+                    <div class="conference">
+                        <h3><a href="{{link}}">{{name}}</a>
+                        {{#if location}}
+                            - <small class="map-link"><a href="https://www.google.com/maps/place/{{location}}">map</a></small>
+                        {{/if}}
+                        </h3>
+                        {{#if desc}}
+                        <p class="conference-description">{{desc}}</p>
+                        {{/if}}
+                    </div>
                   {{/each}}
-
+                  </div>
                   <h2>
                     <span class="arrow">&#62;</span>
-                    <a class="js-list-toggle-link" href="#">NodeSchools <span class="events-number">10</span></a>
+                    <a class="js-list-toggle-link" href="#">NodeSchools <span class="events-number"></span></a>
                   </h2>
                   <ul class="events-list">
                   {{#each nodeschools}}
@@ -79,7 +80,7 @@
 
                   <h2>
                     <span class="arrow">&#62;</span>
-                    <a class="js-list-toggle-link" href="#">Meetups <span class="events-number">10</span></a>
+                    <a class="js-list-toggle-link" href="#">Meetups <span class="events-number"></span></a>
                     </h2>
                   <ul class="events-list">
                   {{#each meetups}}
@@ -98,7 +99,12 @@
 
     <script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
-
+    <style>
+      div.marker-image img {
+        max-width:320px;
+        max-height:100px;
+      }
+    </style>
     <script>
       function haversine() {
         var radians = Array.prototype.map.call(arguments, function(deg) { return deg/180.0 * Math.PI; });
@@ -114,6 +120,29 @@
       L.mapbox.accessToken = 'pk.eyJ1IjoibWlrZWFsIiwiYSI6ImNpaGY5ajk5ZTA0ZTN0cmo3MzZ5NnV5eHIifQ.YBfpOTUwcbaZrNvAfDaDcQ';
       var map = L.mapbox.map('events-map', 'mapbox.streets-basic')
       var featureLayer = L.mapbox.featureLayer()
+      
+      featureLayer.on('layeradd', function(e) {
+        var marker = e.layer
+        var feature = marker.feature
+        var props = feature.properties
+        var html = ''
+        
+        if (props.link) {
+          html += '<div class="marker-title"><a href="' + props.link + '">' + props.title + '</a></div>'
+        } else {
+          html += '<div class="marker-title">' + props.title + '</div>'
+        }
+        if (props.description && props.description.length > 400) {
+          html += '<div class="marker-description">' + props.description.slice(0, 400) + '...</div>'
+        } else if (props.description) {
+          html += '<div class="marker-description">' + props.description + '</div>'
+        }
+        if (props.image) {
+          html += '<div class="marker-image"><img src="' + props.image + '"></img></div>'
+        }
+        
+        marker.bindPopup(html, { minWidth: 320 })
+      })
 
       featureLayer.on('ready', function () {
         if ("geolocation" in navigator) {
@@ -156,7 +185,21 @@
           toggleEventsDisplay(evt);
         }
       });
-
+      var selector = document.querySelectorAll("div.region h2")
+      var totals = {}
+      for (var i=0;i<selector.length;i++) {
+        var ch = selector[i]
+        var regionSubHeading = ch
+        var regionEventsList = regionSubHeading.nextElementSibling
+        var evKey = ch.textContent.replace(/[^a-zA-Z]/g, '')
+        if (!totals[evKey]) totals[evKey] = 0
+        totals[evKey] += regionEventsList.children.length
+        ch.querySelector('span.events-number').textContent = regionEventsList.children.length
+      }
+      document.querySelector('span.key-meetup').textContent += (' ('+totals['Meetups']+')')
+      document.querySelector('span.key-nodeschool').textContent += (' ('+totals['NodeSchools']+')')
+      document.querySelector('span.key-conference').textContent += (' ('+totals['Conferences']+')')
+      
       function toggleEventsDisplay(evt) {
         evt.preventDefault();
         var regionSubHeading = evt.target.parentNode;
