More data and information on being listed.

--- a/layouts/events.hbs
+++ b/layouts/events.hbs
@@ -39,6 +39,8 @@
                 <span class="key-nodeschool" data-i18n="events-nodeschool">NodeSchool</span>
                 <span class="key-conference" data-i18n="events-conference">Conference</span>
               </div>
+              
+              <div class="main-content">{{{contents}}}</div>
 
                 {{#each regions}}
                 <div class="region">
