New foundation specific token.

--- a/layouts/events.hbs
+++ b/layouts/events.hbs
@@ -171,7 +171,7 @@ provides:
         return R * c;
       }
 
-      L.mapbox.accessToken = 'pk.eyJ1IjoibWlrZWFsIiwiYSI6ImNpaGY5ajk5ZTA0ZTN0cmo3MzZ5NnV5eHIifQ.YBfpOTUwcbaZrNvAfDaDcQ';
+      L.mapbox.accessToken = 'pk.eyJ1Ijoibm9kZWpzLWZvdW5kYXRpb24iLCJhIjoiY2locDlqOHI5MDNwbnRzbTJqdzRyZXExayJ9.bwlwXqWIaQw_JqzW39M1Dg';
       var map = L.mapbox.map('events-map', 'mapbox.streets-basic')
       var featureLayer = L.mapbox.featureLayer()
 
