Add "Edit on Github" link
Add an easy way to contribute improvements to
the website using "Edit on Github" link, that
redirects straight to file editor on GitHub.

Fixes: #363

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -134,6 +134,11 @@ pre
     article
         margin-left 220px
 
+.edit-link
+    float right
+    font-size 0.6em
+    transform translateY(30%)
+
 @media screen and (max-width: 480px)
     .has-side-nav
         aside
