fix css hack for "Edit on Github" link

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -137,7 +137,7 @@ pre
 .edit-link
     float right
     font-size 0.6em
-    transform translateY(30%)
+    margin 0.5em 0
 
 @media screen and (max-width: 480px)
     .has-side-nav
