Fix 'other downloads' links to go to /downloads - previous directory listing did not include packages and other downloads.

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -29,7 +29,7 @@
 
                   <ul class="list-divider-pipe home-secondary-links">
                       <li>
-                        <a href="https://nodejs.org/dist/{{ project.currentVersions.lts }}/">{{ labels.other-downloads }}</a>
+                        <a href="https://nodejs.org/{{site.locale}}/download/">{{ labels.other-downloads }}</a>
                       </li>
                       <li>
                           <a href="https://github.com/nodejs/node/blob/{{ project.currentVersions.lts }}/CHANGELOG.md">{{ labels.changelog }}</a>
@@ -51,7 +51,7 @@
 
                     <ul class="list-divider-pipe home-secondary-links">
                         <li>
-                          <a href="https://nodejs.org/dist/{{ project.currentVersions.stable }}/">{{ labels.other-downloads }}</a>
+                          <a href="https://nodejs.org/{{site.locale}}/download/">{{ labels.other-downloads }}</a>
                         </li>
                         <li>
                             <a href="https://github.com/nodejs/node/blob/{{ project.currentVersions.stable }}/CHANGELOG.md">{{ labels.changelog }}</a>
