website: have link to lts schedule

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -63,7 +63,9 @@
 
                   </div>
                 {{/if}}
-
+                <p>
+                  {{{ labels.version-schedule-prompt }}} <a href="https://github.com/nodejs/LTS#lts_schedule">{{ labels.version-schedule-prompt-link-text }}.</a>
+                </p>
             </div>
 
         </div>
