--- a/layouts/css/page-modules/_header.styl
+++ b/layouts/css/page-modules/_header.styl
@@ -70,5 +70,7 @@ header
 
     img
         display block
-        margin .5em auto 1em auto
+        margin .5em auto 0 auto
         border none
+        max-height 75px 
+        max-width 180px
