Update icons to new logo
Updated favicon and apple-touch-icon to use the new logo. The favicon
was switched to PNG instead of ICO, reducing download size significantly
for modern browsers.

Fixes: https://github.com/nodejs/nodejs.org/issues/458

--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
-    <link rel="icon" href="/static/favicon.ico">
+    <link rel="icon" sizes="32x32" type="image/png" href="/static/favicon.png">
 
     <link rel="canonical" href="{{ site.url }}{{#if path}}{{ path }}/{{/if}}">
     {{#each site.feeds}}
