update -green to pass WCAG AA
Based on the new colors defined with the updated logo,
this is the the closest green that passes on a white
background for small text where a contrast ratio
of 4.5 is required.

--- a/layouts/css/_variables.styl
+++ b/layouts/css/_variables.styl
@@ -2,7 +2,7 @@ $body-max-width = 980px
 
 $white = #fff
 
-$node-green = #80bd01
+$node-green = #43853d
 $light-green = #f1fbda
 $hover-green = #d9ebb3
 
