color adjustments needed from green change
Home page updated for aesthetics, download page updated for contrast

--- a/layouts/css/_variables.styl
+++ b/layouts/css/_variables.styl
@@ -3,6 +3,7 @@ $body-max-width = 980px
 $white = #fff
 
 $node-green = #43853d
+$bright-green = #028a00
 $light-green = #f1fbda
 $hover-green = #d9ebb3
 
