--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -49,7 +49,7 @@
 
     a:hover, a:active
         background $gray
-        color $node-green
+        color $light-green
 
 .download-version-toggle
     display flex
@@ -63,7 +63,7 @@
         padding 5px 2px
 
     a:hover, a:active, a.is-version
-        color $node-green
+        color $light-green
         background $gray
 
     a.is-version
@@ -97,7 +97,7 @@
 
         a:hover, a:active
             background $gray
-            color $node-green
+            color $light-green
 
 h5.download-table-previous-releases-header
     margin-bottom 5px
