--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -42,7 +42,7 @@
     margin 10px 4px
     padding 0.2em 0.6em
 
-    background-color $node-green
+    background-color $bright-green
     color $white !important
     border-radius 2px
     font-size 30px
@@ -51,7 +51,7 @@
     transition .2s background-color ease-in-out
 
     &:hover
-        background-color saturation($node-green, 80%)
+        background-color darken($bright-green, 20%)
 
     small
         display block
