consolidating color use
makes on/hover states more consistent and fixes contrast on light backgrounds

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -123,12 +123,15 @@ pre
         a
             display block
             padded-link(10px)
+            padding-top 5px
+            padding-bottom 5px
+            line-height 1
 
         .active
             > a,
             > a:hover
-                color $node-gray
-                background-color $hover-green
+                color $white
+                background-color $active-green
 
     article
         margin-left 220px
