--- a/layouts/css/_variables.styl
+++ b/layouts/css/_variables.styl
@@ -4,8 +4,8 @@ $white = #fff
 
 $node-green = #43853d
 $bright-green = #028a00
-$light-green = #f1fbda
-$hover-green = #d9ebb3
+$light-green = lighten($node-green, 90%)
+$active-green = darken($bright-green, 20%)
 
 $yellow = #f7da03
 
