Use SVG logos on the download page

--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -38,9 +38,10 @@
         padding-top 1em
         background $light-green
 
-    img
+    .download-logo
         display block
         margin 0 auto
+        fill: $node-green
 
     p
         padding-bottom 1em
