make svg download logo visible on hover

--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -52,6 +52,9 @@
         background: $node-green
         color $white
 
+        .download-logo
+            fill: $white
+
     a:active
         background $active-green
         color $white
