--- a/layouts/partials/download-matrix.hbs
+++ b/layouts/partials/download-matrix.hbs
@@ -101,6 +101,7 @@
         <li><a href="https://nodejs.org/dist/{{version}}">{{site.all-downloads}}</a></li>
         <li><a href="/{{site.locale}}/{{site.download.package-manager.link}}">{{site.download.package-manager.text}}</a></li>
         <li><a href="/{{site.locale}}/{{site.download.releases.link}}/">{{site.download.releases.text}}</a></li>
+        <li><a href="https://nodejs.org/download/nightly/">{{site.nightly}}</a></li>
     </ul>
     <p>{{downloads.buildDisclaimer}}</p>
 </section>
