Initial work on case studies from the foundation.

--- a/layouts/foundation.hbs
+++ b/layouts/foundation.hbs
@@ -13,6 +13,9 @@
                     <li{{#equals path site.foundation.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.foundation.link}}/">{{site.foundation.text}}</a>
                     </li>
+                    <li{{#equals path site.foundation.casestudies.link}} class="active"{{/equals}}>
+                        <a href="/{{site.locale}}/{{site.foundation.casestudies.link}}/">{{site.foundation.casestudies.text}}</a>
+                    </li>
                     <li{{#equals path site.foundation.members.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.foundation.members.link}}/">{{site.foundation.members.text}}</a>
                     </li>
