downloads: split into primary and secondary
Currently we have one large table with many options in it including
not actively downloaded releases. This commit separates the list
into a primary and additional downloads. It also adds PPC to the
list of additional downloads as it is now officially supported.

--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -1,8 +1,8 @@
 .download-header
-
     h1
         width 40%
         float left
+        margin-bottom: -1rem
 
     ul
         margin-top 2rem
@@ -102,6 +102,7 @@
             height 100%
             width 100%
             text-align center
+            font-size: 0.8em;
 
         a:hover, a:active
             background $node-green
