--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -1,6 +1,6 @@
 <section>
+    <p class="color-lightgray">{{downloads.currentVersion}}: <strong>{{version}}</strong></p>
     <p>{{downloads.intro}}</p>
-
     <div class="download-hero full-width">
         <ul class="no-padding">
             <li>
@@ -70,24 +70,6 @@
             </tr>
 
             <tr>
-                <th>SunOS Binaries (.tar.xz)</th>
-                <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-sunos-x86.tar.xz">32-bit</a></td>
-                <td colspan="3"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-sunos-x64.tar.xz">64-bit</a></td>
-            </tr>
-
-            <tr>
-                <th>ARM Binaries (.tar.xz)</th>
-                <td colspan="2"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-armv6l.tar.xz">ARMv6</a></td>
-                <td colspan="2"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-armv7l.tar.xz">ARMv7</a></td>
-                <td colspan="2"><a href="https://nodejs.org/dist/{{version}}/node-{{version}}-linux-arm64.tar.xz">ARMv8</a></td>
-            </tr>
-
-            <tr>
-                <th>Docker Image</th>
-                <td colspan="6"><a href="https://hub.docker.com/_/node/">Official Node.js Docker Image</a></td>
-            </tr>
-
-            <tr>
                 <th>Source Code</th>
                 <td colspan="6">
                     <a href="https://nodejs.org/dist/{{version}}/node-{{version}}.tar.gz">node-{{version}}.tar.gz</a>
@@ -95,13 +77,4 @@
             </tr>
         </tbody>
     </table>
-
-    {{downloads.currentVersion}}: <strong>{{version}}</strong>
-    <ul>
-        <li><a href="https://nodejs.org/dist/{{version}}">{{site.all-downloads}}</a></li>
-        <li><a href="/{{site.locale}}/{{site.download.package-manager.link}}">{{site.download.package-manager.text}}</a></li>
-        <li><a href="/{{site.locale}}/{{site.download.releases.link}}/">{{site.download.releases.text}}</a></li>
-        <li><a href="https://nodejs.org/download/nightly/">{{site.nightly}}</a></li>
-    </ul>
-    <p>{{downloads.buildDisclaimer}}</p>
 </section>
