Fix undefined stylus variable

--- a/layouts/css/page-modules/_scrollToTop.styl
+++ b/layouts/css/page-modules/_scrollToTop.styl
@@ -6,7 +6,7 @@ html
     font-size 1rem
     color $node-gray
     background-color $light-gray3
-    border 1px solid $gray2
+    border 1px solid $light-gray2
     border-radius 2px
     position fixed
     bottom 10%
