Improve styling of event listing

--- a/layouts/css/page-modules/_events.styl
+++ b/layouts/css/page-modules/_events.styl
@@ -49,10 +49,16 @@
         background $blue
 
 .region
+    border 1px solid $light-gray2
+    background $light-gray3
+    padding 0.75em 1em
     margin-bottom 2em
 
     h1
-        margin 0 0 0.5em
+        border-bottom 1px solid
+        text-transform uppercase
+        font-size 22px
+        margin 0 0 1em
 
     h2
         margin 0 0 0.5em
@@ -63,6 +69,9 @@
 
         .arrow
             display inline-block
+            font-size 0.5em
+            vertical-align middle
+            padding-bottom 0.25em
 
     h3
         margin 0 0 0.5em
