--- a/layouts/events.hbs
+++ b/layouts/events.hbs
@@ -39,7 +39,7 @@
                 <span class="key-nodeschool" data-i18n="events-nodeschool">NodeSchool</span>
                 <span class="key-conference" data-i18n="events-conference">Conference</span>
               </div>
-              
+
               <div class="main-content">{{{contents}}}</div>
                 {{#each regions}}
                 <div class="region">
@@ -60,7 +60,7 @@
                   {{/each}}
                   </div>
                   <h2>
-                    <span class="arrow">&#62;</span>
+                    <span class="arrow">&#x25ba;</span>
                     <a class="js-list-toggle-link" href="#">NodeSchools <span class="events-number"></span></a>
                   </h2>
                   <ul class="events-list">
@@ -80,7 +80,7 @@
                   </ul>
 
                   <h2>
-                    <span class="arrow">&#62;</span>
+                    <span class="arrow">&#x25ba;</span>
                     <a class="js-list-toggle-link" href="#">Meetups <span class="events-number"></span></a>
                     </h2>
                   <ul class="events-list">
@@ -157,7 +157,7 @@
               return {lon: _lon, lat: _lat, dist: dist}
             })
             .sort(function (a, b) {
-              return a.dist > b.dist ? 1 : 
+              return a.dist > b.dist ? 1 :
                      a.dist < b.dist ? -1 : 0;
             })
             var nearest = []
