Replace `scroll` with `auto`

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -71,7 +71,7 @@ pre
     font-size 0.8em
     white-space pre-wrap
     color $light-gray3
-    overflow-x scroll
+    overflow-x auto
 
     code
         color $light-gray3
