--- a/layouts/css/page-modules/_in-the-news.styl
+++ b/layouts/css/page-modules/_in-the-news.styl
@@ -11,7 +11,7 @@
             margin-bottom 0.5em
 
     time
-        margin-right 1em
+        width 5.5em
         color $light-gray
         white-space nowrap
         // Fix min-width in Safari
