--- a/layouts/knowledge-base-index.hbs
+++ b/layouts/knowledge-base-index.hbs
@@ -8,7 +8,7 @@
     <div id="main">
         <div class="container has-side-nav">
 
-            {{!-- > docs-menu --}}
+            {{!-- {{> navigation key='docs'}} --}}
 
             <article>
                 {{{ contents }}}
