blog-index: some extra styling for pagination links, fixes #442

--- a/layouts/blog-index.hbs
+++ b/layouts/blog-index.hbs
@@ -30,6 +30,10 @@
                         <a href="/{{ site.locale }}/{{ pagination.prev.path }}">&lt; Newer</a>
                     {{/if}}
 
+                    {{#if pagination.prev.path}}{{#if pagination.next.path}}
+                    |
+                    {{/if}}{{/if}}
+
                     {{#if pagination.next.path}}
                         <a href="/{{ site.locale }}/{{ pagination.next.path }}">Older &gt;</a>
                     {{/if}}
