Use the same style for all links (#673)

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -33,7 +33,8 @@ a:hover
 
 a:hover
     code
-        color $hover-red
+        background-color transparent
+        color #fff
 
 a.imagelink:hover
     background-color transparent
