fix: ensure consistency with htmllint

--- a/layouts/css/page-modules/_scrollToTop.styl
+++ b/layouts/css/page-modules/_scrollToTop.styl
@@ -2,7 +2,7 @@
 html
   scroll-behavior smooth
 
-#scrollToTop
+#scroll-to-top
   font-size 1rem
   color $node-gray
   background-color $light-gray3
