--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -1,4 +1,4 @@
-<a href="#" id="scrollToTop">&uarr; <span>{{i18n.scrollToTop}}</span></a>
+<a href="#" id="scroll-to-top">&uarr; <span>{{i18n.scrollToTop}}</span></a>
 
 <footer {{#if className}}class="{{className}}"{{/if}} role="contentinfo">
 
