fix: ensure stylint conformity

--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -2,7 +2,7 @@
   h1
     width 40%
     float left
-    margin-bottom: -1rem
+    margin-bottom -1rem
 
   ul
     margin-top 2rem
@@ -42,18 +42,18 @@
   .download-logo
     display block
     margin 0 auto
-    fill: $node-green
+    fill $node-green
 
   p
     padding-bottom 1em
     margin 1em 0 0
 
   a:hover
-    background: $node-green
+    background $node-green
     color $white
 
     .download-logo
-      fill: $white
+      fill $white
 
   a:active
     background $active-green
@@ -102,7 +102,7 @@
       height 100%
       width 100%
       text-align center
-      font-size: 0.8em;
+      font-size 0.8em;
 
     a:hover, a:active
       background $node-green
