--- a/layouts/css/page-modules/_events.styl
+++ b/layouts/css/page-modules/_events.styl
@@ -90,7 +90,7 @@
     border-radius 3px
     padding 3px 4px
     font-size 0.6em
-    color: $white
+    color $white
 
   .events-list
     display flex
