--- a/layouts/css/page-modules/_footer.styl
+++ b/layouts/css/page-modules/_footer.styl
@@ -1,7 +1,7 @@
 footer
   margin-top 2em
   background-color $node-gray
-  padding: 0 0px
+  padding 0 0px
 
   a,
   a:link,
@@ -19,7 +19,7 @@ footer
   display flex
   justify-content space-between
   font-size 16px
-  margin: 1em 0
+  margin 1em 0
 
   ul
     list-style-type none
