--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -54,7 +54,7 @@ img
   .logos &
     // Fixes logo size on Firefox, see:
     // https://github.com/nodejs/nodejs.org/issues/558
-    width: 100%
+    width 100%
 
 code
   background-color $light-gray3
