--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -31,7 +31,7 @@
       border-bottom 1px solid $home-secondary-links-color
 
 #home-intro
-  max-width: $body-max-width * 0.75
+  max-width $body-max-width * 0.75
   margin 0 auto
   padding 30px 0
   text-align center
