--- a/layouts/partials/secondary-download-matrix.hbs
+++ b/layouts/partials/secondary-download-matrix.hbs
@@ -37,7 +37,7 @@
         <td colspan="6"><a href="http://www.ibm.com/developerworks/web/nodesdk/">Download (Unofficial, provided by IBM)</a></td>
       </tr>
       <tr>
-        <th>AIX on Powert Systems</th>
+        <th>AIX on Power Systems</th>
         <td colspan="6"><a href="http://www.ibm.com/developerworks/web/nodesdk/">Download (Unofficial, provided by IBM)</a></td>
       </tr>
     </tbody>
