Fix the id search

--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -29,7 +29,7 @@
 
 <link rel="stylesheet" href="/static/css/prism-tomorrow.css" media="all">
 <script type="text/javascript">
-  var $scrollToTop = document.getElementById('scrollToTop');
+  var $scrollToTop = document.getElementById('scroll-to-top');
   (window.onscroll = function() {
     $scrollToTop.style.display = (window.pageYOffset > window.innerHeight) ? 'block' : 'none';
   })();
