Add links to latest versions in release list (#708)

--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -11,11 +11,10 @@
         <h1>Previous Releases</h1>
 
         <section>
-          <h2>io.js &amp; Node.js</h2>
-          <p>
-            {{iojs.intro}}
-          </p>
+          {{{ contents }}}
         </section>
+
+        <br>
 
         <section>
           <table class="download-table full-width" cellspacing="0" border="0" cellpadding="0">
