add attributes for accessibility (#744)

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -109,14 +109,19 @@
       <span id="logo-first" class="interactive-item">
         <img src="/static/images/interactive/nodejs-interactive-logo-center.png" />
       </span>
-      <a class="interactive-item" href="http://events.linuxfoundation.org/events/node-interactive-europe">
-        <img src="/static/images/interactive/nodejs-interactive-hero-banner-left-eu.png" />
+      <a class="interactive-item" href="http://events.linuxfoundation.org/events/node-interactive-europe"
+        title="Node.js Interactive Europe">
+        <img src="/static/images/interactive/nodejs-interactive-hero-banner-left-eu.png"
+          alt="Amsterdam, Netherlands, September 15-16, 2016"/>
       </a>
       <span id="logo-center" class="interactive-item">
-        <img src="/static/images/interactive/nodejs-interactive-logo-center.png" />
+        <img src="/static/images/interactive/nodejs-interactive-logo-center.png"
+          alt="Node.js Interactive" />
       </span>
-      <a class="interactive-item" href="http://events.linuxfoundation.org/events/node-interactive">
-        <img src="/static/images/interactive/nodejs-interactive-hero-banner-right-na.png" />
+      <a class="interactive-item" href="http://events.linuxfoundation.org/events/node-interactive"
+        title="Node.js Interactive North America">
+        <img src="/static/images/interactive/nodejs-interactive-hero-banner-right-na.png"
+          alt="Austin, Texas, November 29-30, 2016" />
       </a>
     </div>
   </div>
