zh-cn local for Download page(index/current)

--- a/layouts/partials/secondary-download-matrix.hbs
+++ b/layouts/partials/secondary-download-matrix.hbs
@@ -1,5 +1,5 @@
 <section>
-  <h2>Additional Platforms</h2>
+  <h2>{{additional.headline}}</h2>
   <table class="download-matrix full-width">
     <tbody>
       <tr>
