Updating dates on website.

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -111,7 +111,7 @@
       </span>
       <a class="interactive-item" href="http://events.linuxfoundation.org/events/node-interactive-europe">
         <img src="/static/images/interactive/nodejs-interactive-hero-banner-left-eu.png"
-          alt="Node.js Interactive Europe, Amsterdam, Netherlands, September 15-16, 2016"/>
+          alt="Node.js Interactive Europe, Amsterdam, Netherlands, September 15-18, 2016"/>
       </a>
       <span id="logo-center" class="interactive-item">
         <img src="/static/images/interactive/nodejs-interactive-logo-center.png"
@@ -119,7 +119,7 @@
       </span>
       <a class="interactive-item" href="http://events.linuxfoundation.org/events/node-interactive">
         <img src="/static/images/interactive/nodejs-interactive-hero-banner-right-na.png"
-          alt="Node.js Interactive North America, Austin, Texas, November 29-30, 2016" />
+          alt="Node.js Interactive North America, Austin, Texas, November 29 - Dec 2, 2016" />
       </a>
     </div>
   </div>
